create new react app

--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "MERN-app-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "mern-app-client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/glaserbw/MERN-app-client.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/glaserbw/MERN-app-client/issues"
-  },
-  "homepage": "https://github.com/glaserbw/MERN-app-client#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
