--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-icons-kit": "^1.1.10",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.6"
